public class Main {
   // build.gradleが代わりの動作をやってくれるので、不要になる
}
