package refoctor.domain;

public interface TotalWorkMinutesRepository {
    void totalOutPut(String yearMonth);
}
